--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -17,4 +17,33 @@
         <item name="android:backgroundDimEnabled">true</item>
         <!--模糊-->
     </style>
+
+    <!--升级dialog-->
+    <style name="MyDialog" parent="@android:style/Theme.Dialog">
+        <!-- 是否有边框 -->
+        <item name="android:windowFrame">@null</item>
+        <!-- 是否为全屏 -->
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <!-- 对话框是否透明 -->
+        <item name="android:windowIsTranslucent">true</item>
+        <!-- 是否浮在下层窗体之上-->
+        <item name="android:windowIsFloating">true</item>
+        <!-- 背景 -->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!-- 是否显示壁纸 -->
+        <item name="android:windowShowWallpaper">false</item>
+        <!-- 设置窗体内容背景 -->
+        <item name="android:windowContentOverlay">@null</item>
+        <!-- 是否允许背景灰暗 -->
+        <item name="android:backgroundDimEnabled">true</item>
+        <!--  是否再点击外部可关闭 -->
+        <item name="android:windowCloseOnTouchOutside">true</item>
+        <!-- 设置动画，注意是style -->
+        <item name="android:windowAnimationStyle">@style/dialogAnim</item>
+    </style>
+    <style name="dialogAnim" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/dialog_enter</item>
+        <item name="android:windowExitAnimation">@anim/dialog_exit</item>
+    </style>
 </resources>
