--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="item_text_color">#B1B1B1</color>
 
     <color name="main_title_bg_color">#60DBCF</color>
+
+    <color name="toast_bg">#242424</color>
+    <color name="toast_txt_color">#FFFFFF</color>
 </resources>
